2021-02-09 4.2.0:

	New features:

	all : implemented "classic" abstract classes and functions (see [haxe-evolution#69](https://github.com/HaxeFoundation/haxe-evolution/pull/69)) (#9716)
	all : module-level static declarations (#8460)
	all : implemented rest arguments (variadic functions) for all targets with `haxe.Rest` type (#9961)
	all : per-thread event loops `sys.thread.Thread.events` (#9868)
	all : added `@:inheritDoc` meta to inherit documentation for a type or field from another type or field (#9817)
	all : support method overloading for extern methods on all targets (#9793)
	all : constructors forwarding for abstracts with `@:forward.new` (#9735)
	all : added `EIs` constructor to `haxe.macro.Expr` (#9689)
	all : added variance forwarding with `@:forward.variance` (#9741)
	all : treat `Any` as `Dynamic` in variance unification (#6649)
	all : added some common exception types to `haxe.exceptions` package
	all : support metadata in var declaration syntax (#9618)
	all : added `StringTools.unsafeCharAt` (#9467)
	eval : added libuv bindings under `eval.luv` package (#9903)
	eval : added bindings to native `Int64` and `UInt64` implementations under `eval.integers` package (#9903)
	cs : UDP socket implementation (#8498)
	cs : added `cs.Syntax` module (#10051)
	jvm : added `-D jvm.dynamic-level` to control the amount of dynamic support code being generated. 0 = none, 1 = field read/write optimization (default), 2 = compile-time method closures
	java,jvm : support `--java-lib <directory>` (#9551)
	python : threading API implementation (#9754)

	General improvements:

	all : `expr is SomeType` doesn't require parentheses anymore (#9672)
	all : increased priority of @:using extensions (#9681)
	all : allowed usage of static extensions with super (#10062)
	all : allow @:noDoc on fields too (#9893)
	all : made `Map` abstract transitive (#9877)
	all : support `@:native` on enum constructors (#9806)
	all : support `@:using` on typedefs (#9749)