@@ -58,11 +58,6 @@ abstract Thread(ThreadImpl) from ThreadImpl {
 	}
 
 	@:keep
-	static function initEventLoop() {
-		@:privateAccess HaxeThread.current().events = new EventLoop();
-	}
-
-	@:keep
 	static public function processEvents() {
 		HaxeThread.current().events.loop();
 	}
@@ -71,10 +66,18 @@ abstract Thread(ThreadImpl) from ThreadImpl {
 private typedef ThreadHandle = hl.Abstract<"hl_thread">;
 
 private class HaxeThread {
-	static final mainThreadHandle:ThreadHandle = currentHandle();
-	static final mainThread:HaxeThread = new HaxeThread();
-	static final threads = new Array<{thread:HaxeThread, handle:ThreadHandle}>();
-	static final threadsMutex = new Mutex();
+	static var mainThreadHandle:ThreadHandle;
+	static var mainThread:HaxeThread;
+	static var threads:Array<{thread:HaxeThread, handle:ThreadHandle}>;
+	static var threadsMutex:Mutex;
+
+	static function __init__() {
+		mainThreadHandle = currentHandle();
+		threadsMutex = new Mutex();
+		threads = [];
+		mainThread = new HaxeThread();
+		mainThread.events = new EventLoop();
+	}
 
 	public var events(default,null):Null<EventLoop>;
 	final messages = new Deque();
