@@ -1,3 +1,9 @@
+2021-XX-XX 4.2.1:
+
+	Bugfixes:
+
+	threads : changed main thread initialization to make main event loop available during static initialization (#10114)
+
 2021-02-09 4.2.0:
 
 	New features:
